refactor: expose module domain operations